# ROS

./: README.md
AISR/src/aisr4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
AISR/src/aisr4_moveit_config/config/: aisr.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
AISR/src/aisr4_moveit_config/launch/: aisr_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_arm_ik.launch  robot_model_and_robot_state_tutorial.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
AISR/src/aisr4_moveit_config/scripts/: arm_control.py  joint_position.txt  plot_workspace.py
AISR/src/aisr4_moveit_config/src/: Iterate_work_space.cpp  joint_position.txt  robot_arm_ik.cpp  robot_model_and_robot_state_tutorial.cpp  write_point.txt
ROS_Serial_test/devel/: .catkin  local_setup.sh
ROS_Serial_test/install/: local_setup.sh
catkin_stm32_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_stm32_ws/install/: .rosinstall  setup.sh
first_ws/devel/: .catkin  .rosinstall
first_ws/install/: .rosinstall  local_setup.sh
first_ws/src/: frames.gv
panda_arm_ikfast_plugin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  (+5 more)
xarm_ws/: geometry_msgs.msg  instructions.py  moveit_msgs.msg  结合XArm Moveit功能包画圆.md
(+709 files in other folders)
